# rust-fluidsynth

./: Cargo.toml
examples/: example.rs  fluidsynth_simple.rs
src/: audio.rs  event.rs  ffi.rs  gen.rs  lib.rs  log.rs  midi.rs  modulator.rs  ramsfont.rs  seq.rs  settings.rs  sfont.rs  synth.rs  voice.rs
tests/: lib.rs  settings.rs
