[package]

name = "fluidsynth"
version = "0.0.1"
edition = "2021"
authors = ["Anna Scholtz <anna@scholtzan.net>"]
license = "LGPL-2.0"
description = "FluidSynth bindings"
repository = "https://github.com/scholtzan/rust-fluidsynth"

[dependencies]
libc = "0.2"

[[example]]
name = "example"
path = "examples/example.rs"

[dev-dependencies]
rand = "0.8.5"